adjust ideal spacing to prevent scroll;add css debugging line

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
     monospace;
 }
 
+* {
+  background: #f001;
+}
